[gd_scene load_steps=3 format=3 uid="uid://xfkiasbvrjwa"]

[ext_resource type="Script" path="res://Scripts/FallDead.gd" id="1_dx46p"]
[ext_resource type="AudioStream" uid="uid://bqgcm2lvdo6kg" path="res://Assets/Music/laserRetro_001.ogg" id="2_ayxan"]

[node name="FallDead" type="Area2D"]
collision_mask = 2
script = ExtResource("1_dx46p")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DeadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ayxan")
volume_db = -5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
